# tapl

./: .clang-format  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  tapl.code-workspace
examples/: basic_variables.tim  classes.tim  collections.tim  current_functionality.tim  files.tim  functions.tim  print_example.tim  templates.tim  timplates.tim
src/compilers/compyler/: __main__.py  ast.py  ast_generator.py  code_generator.py  token.py  tokenizer.py
src/compilers/compyler/ast_checks/: ast_check.py  pass_base.py  scope.py  scope_wrapper.py  scoping_pass.py  typing_pass.py
src/compilers/compyler/errors/: __init__.py  ast_error.py  stream_error.py  tapl_error.py
src/compilers/compyler/expressions/: __init__.py  binary_expression.py  call_expression.py  expression.py  expression_type.py  identifier_expression.py  string_expression.py  this_expression.py  token_expression.py  type_cast_expression.py  unary_expression.py
src/compilers/compyler/statements/: __init__.py  assignment_statement.py  break_statement.py  breakall_statement.py  class_statement.py  continue_statement.py  expression_statement.py  for_loop_statement.py  function_statement.py  identifier_statement.py  if_statement.py  lifecycle_statement.py  lifecycle_statement_type.py  list_statement.py  print_statement.py  statement.py  (+3 more)
src/compilers/test_compyler/: all_tokens.tim  example.tim  test_ast_generator.py  test_tokenizer.py
src/stdlib/: file.h  list.h
src/templates/: list.h
tools/vscode/tapl-lang/: CHANGELOG.md  LICENSE  README.md  language-configuration.json  package.json
(+50 files in other folders)
