[tool.poetry]
name = "tapl"
version = "0.1.0"
description = "Tim's Awesome Programming Language - Including the Compilers"
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
